[package]
name = "tray_rust"
version = "0.0.1"
authors = ["Will Usher <will@willusher.io>"]

[[bin]]
name = "tray_rust"
doc = false

[dependencies]
enum-set = "0.0.8"
rand = "0.7.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
docopt = "1.1.0"
image = "0.22.3"
num_cpus = "1.10.1"
tobj = "0.1.11"
byteorder = "1.3.2"
scoped_threadpool = "0.1.9"
bspline = "0.2.3"
bincode = "1.2.0"
mio = "0.5.1"
tokio = "0.1.22"
la = "0.2.0"
light_arena = "1.0.1"
nalgebra-glm = "0.4.2"

[profile.release]
# How to send extra compiler flag for -march=native equivalent in Rust
# flag is `-C target-cpu=native`
opt-level = 3
debug = false
rpath = false
lto = true

[features]
unstable = []
